[package]
name = "freshair"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.17.0", features = ["macros"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
chrono = "0.4.42"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
