[package]
name = "freshair"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.17.0", features = ["macros"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
chrono = "0.4.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
